# adaptkde-app

./: main.py  pyproject.toml
