[project]
name = "adaptkde-app"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptkde",
    "corner>=2.2.3",
    "dill>=0.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
adaptkde = { git = "ssh://git@github.com/angusforrest/adaptkde" }
